Add new rank "Sminagos", update resource checks, fix rank icon paths, and refine related UI components.